# mipt_cpp_autumn_2023

./: .gitignore
01/: main.cpp
01/lib_isEqual/: CMakeLists.txt
01/lib_isEqual/source/: isEqual_test.cpp
02/: CMakeLists.txt  a.out  main.cpp
02/lib_libstemmer/: CMakeLists.txt
02/lib_libstemmer/include/: libstemmer.hpp
02/lib_libstemmer/source/: libstemmer.cpp  libstemmer_test.cpp
03/: CMakeLists.txt
03/lib_allocator/: CMakeLists.txt
03/lib_allocator/include/: allocator.hpp
03/lib_allocator/source/: allocator.cpp  allocator_test.cpp
04/: CMakeLists.txt  main.cpp
04/lib_tparser/: CMakeLists.txt
04/lib_tparser/include/: tparser.hpp
04/lib_tparser/source/: tparser.cpp
1/: CMakeLists.txt
1/lib_isEqual/include/: isEqual.hpp
1/lib_isEqual/source/: isEqual.cpp
